# backend-rag-ia

./: .coverage  .coveragerc  .cursorignore  .cursorrules  .dockerignore  .env.example  .env.github  .env.render  .gitignore  API.md  Dockerfile  Dockerfile.search  README.md  REGRAS_RENDER.md  RULES.md  Render.md  alteracoes_sintaxe.txt  build.sh  debug_docs.md  debug_supabase.md  debug_supabase.py  deploy_rules.md  docker-compose.yml  gunicorn.conf.py  knowledge_base.csv  main.py  oracle.py  organizar_testes.sh  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  regras.md  render.yaml  reorganizacao_testes.txt  requirements.txt  ruff.toml  ruff_output.json  start.sh  supabase.md  (+7 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  ci-cd.yml  ci.yml  code-quality.yml  dependency-review.yml  deploy-render-desabilitado.yml  deploy.yml  deploy_improved.yml  docker-build-test.yml  docker-publish.yml  validation.yml
.ruff/: pyproject.toml
00_testes_apenas_raiz/: conftest.py  pytest.ini  ruff.toml  test_embate_acao.py  test_embate_multiagente.py  test_embate_ruff.py  test_sugestoes_embate.py
00_testes_apenas_raiz/1_unit/: test_embates_manager.py  test_embates_storage.py  test_schemas.py  test_similarity.py
00_testes_apenas_raiz/2_integration/: c_test_supabase.py  conftest_embates.py  (+3 more)
01_regras_md_apenas_raiz/: a_index.md  l_transicao_pastas_raiz.md
04_scripts_apenas_raiz/: reorganizar_pastas.py
05_monitoring_apenas_raiz/: config.yml  docker-compose.yml  monitor.py  prometheus.yml
06_scripts_apenas_raiz/: reorganizar_pastas.py
07_monitoring_apenas_raiz/: config.yml  monitor.py
API_frontend_flask/: .env.example  .gitignore  __init__.py  app.py  backend_app.py  composer.json  frontend_flask_rules.md  job_runner.sh  render.yaml  render_deploy.md  requirements.txt  requirements_frontend.txt  run_api_front  run_backend.py  run_frontend.py
MultiAgente_gemini/: __init__.py
api/: routes.py
backend-rag-ai/: .coveragerc  .cursorignore  .dockerignore  Dockerfile  __init__.py  core  gerar_relatorios.py  render.yaml  requirements.txt  run_server.py  setup.py
backend-rag-ia/: Dockerfile  README.md  main.py
backend_rag_ia/: .coverage  .coveragerc  Dockerfile  Dockerfile.tmp  README.md  __init__.py  app.py  constants.py  docker-compose.yml  exceptions.py  main.py  pytest.ini  render.yaml  requirements.txt  setup.py
clusters/: __init__.py  base.py  local.py  production.py
clusters_API/: __init__.py  base.py  production.py
clusters_CONFIG/: config.py
clusters_SCRIPT/: dev.ts  monitor.py  package.json  tsconfig.json
config/: .env.example  config.py  settings.py
docs/: NEXT_STEPS_QUESTIONS.md  RULES.md  docstring_examples.py  logging.md
documentos/: teste.json  teste.md
embates/: embate_avaliacao_repositorio.json  embate_cli_conversas_longas.json  embate_configuracao_realtime_policies.json  embate_conformidade.json  embate_migracao_schema_rag.json  embate_monitoramento_real.json  embate_monitoring.json  embate_organizacao_diretorios.json  embate_priorizacao_testes.json  embate_resolucao_conflitos.json  embate_simplificacao_monitoramento.json  embate_unificacao_cli_embates.json  embate_ux_cli.json
fixtures/: conftest.py
frontend/: .env.production  README.md  package-lock.json  package.json  vite.config.ts
integration/: test_supabase_sync.py
models/: database.py
monitoring/: check_deps.py  check_env.py  check_network.py  docker-compose.yml  monitor.py
queries/: otimizacoes_supabase.sql
regras_md_apenas_raiz/: a_index.md
scripts/: format_code.py  gerenciar_render.py  migrate_to_supabase.py  monitorar_build_docker.py  run-local.sh  start.sh  test_api_connection.ts  upload_local_docs.py  verificar_producao.py
scripts_apenas_raiz/: controlar_render.py  formatar.py  formatar_ruff.py  instalar_hooks.py  listar_documentos.py  monitorar_docker.py  setup.py  ssh_ctl.sh  testar_busca_render.py  testar_busca_semantica.py  testar_busca_supabase.py  verificar_codigo.py  verificar_prod.py  verificar_status_busca.py
services/: vector_store.py
sql/: 01_init.sql  06_test_document_changes.sql  statistics.sql
templates/: frontend_flask_rules.md
test/: Dockerfile  run_test.sh
testes_apenas_raiz/: conftest.py  pytest.ini
tests/: conftest.py  test_basic.py
tools/: test_document.json  upload_documents.py
unit/: test_embates_manager.py  test_similarity.py
utils/: logger.py  messages.py  test_utils.py
(+850 files in other folders)
