[tool.poetry]
name = "backend-rag-ia"
version = "0.1.0"
description = "Backend RAG IA"
authors = ["Diego Fornalha <diegofornalha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "2.2.2"
torch = "2.2.0"
transformers = "4.30.2"
huggingface-hub = "0.16.4"
supabase = "1.0.3"
rich = "13.4.2"
python-dotenv = "1.0.1"
numpy = "1.24.3"
fastapi = "^0.115.6"
uvicorn = "^0.24.0"
ruff = "^0.1.6"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs/*", "tests/*"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["backend_rag_ia"]
known-third-party = ["rich", "supabase", "sentence_transformers"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"
